@@ -11,10 +11,10 @@ def typing_and_assignment_expression():
         print(var)
 
 
-def typing_and_self_referncing_assignment_expression():
+def typing_and_self_referencing_assignment_expression():
     """The variable gets assigned in an assignment expression that references itself"""
     var: int
-    if (var := var ** 2): # [undefined-variable]
+    if (var := var ** 2):  # false negative--walrus operator!
         print(var)
 
 
@@ -108,3 +108,20 @@ sorted_things = sorted(
     if (x_0 := thing.this_value) < (x_1 := thing.that_value)
     else x_1,
 )
+
+
+# Tests for type annotation reused in comprehension
+
+def type_annotation_used_after_comprehension():
+    """https://github.com/PyCQA/pylint/issues/5326#issuecomment-982635371"""
+    my_int: int
+    ints = [my_int + 1 for my_int in range(5)]
+
+    for my_int in ints:
+        print(my_int)
+
+
+def type_annotation_unused_after_comprehension():
+    """https://github.com/PyCQA/pylint/issues/5326"""
+    my_int: int
+    _ = [print(kwarg1=my_int, kwarg2=my_int) for my_int in range(10)]
